📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21406,5 +21406,13 @@
         "published": "Fri, 19 Dec 2025 07:10:00 +0000",
         "source": "WIRED",
         "summary": "Discover how to save on Ring cameras, doorbells, outdoor cameras, and more."
+    },
+    {
+        "id": "https://mashable.com/article/pluribus-carol-zosia-kiss-rhea-seehorn-interview",
+        "title": "Rhea Seehorn reacts to that big Pluribus kiss: There is some willful delusion",
+        "link": "https://mashable.com/article/pluribus-carol-zosia-kiss-rhea-seehorn-interview",
+        "published": "Fri, 19 Dec 2025 08:00:00 +0000",
+        "source": "Mashable",
+        "summary": "\"Pluribus\" stars Rhea Seehorn and Karolina Wydra weigh in on Carol and Zosia's first kiss in episode 8."
     }
 ]
