📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21414,5 +21414,45 @@
         "published": "Fri, 19 Dec 2025 08:00:00 +0000",
         "source": "Mashable",
         "summary": "\"Pluribus\" stars Rhea Seehorn and Karolina Wydra weigh in on Carol and Zosia's first kiss in episode 8."
+    },
+    {
+        "id": "https://www.wired.com/story/chrome-extension-linkedin-allen-iverson/",
+        "title": "This Chrome Extension Turns LinkedIn Posts About AI Into Facts About Allen Iverson",
+        "link": "https://www.wired.com/story/chrome-extension-linkedin-allen-iverson/",
+        "published": "Fri, 19 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The developers of a browser tool that changes AI-centric LinkedIn posts to Allen Iverson facts want to help \u201ctake back control of your experience of the internet.\u201d"
+    },
+    {
+        "id": "https://www.engadget.com/audio/the-best-dac-for-lossless-high-resolution-music-iphone-android-160056147.html?src=rss",
+        "title": "The best DACs for Apple Music Lossless in 2026",
+        "link": "https://www.engadget.com/audio/the-best-dac-for-lossless-high-resolution-music-iphone-android-160056147.html?src=rss",
+        "published": "Fri, 19 Dec 2025 10:00:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If you want to hear Apple Music\u2019s lossless catalog the way it was meant to sound, you will need a little extra hardware. iPhones and most wireless headphones still have limitations when it comes to high-resolution audio, which means a good DAC can make a real difference in clarity and detail. Whether you listen through wired earbuds, studio headphones or a home speaker setup, the right DAC can bring out far more texture in your music.<br /><br />Lossless audio can be confusing at first, espec"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-robot-vacuum-mop/",
+        "title": "Best robot vacuum mops of 2025: I've tested dozens of these robots - here are the top ones",
+        "link": "https://www.zdnet.com/article/best-robot-vacuum-mop/",
+        "published": "Fri, 19 Dec 2025 10:01:27 GMT",
+        "source": "Latest news",
+        "summary": "We've tested over 50 of the top robot vacuum and mop combos from brands like Roborock, Eufy, Ecovacs, and Dreame to determine which one is best at keeping a home clean."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-get-hybrid-or-remote-job-work/",
+        "title": "How to get that hybrid or remote job you want: 6 expert tips",
+        "link": "https://www.zdnet.com/article/how-to-get-hybrid-or-remote-job-work/",
+        "published": "Fri, 19 Dec 2025 09:34:48 GMT",
+        "source": "Latest news",
+        "summary": "Here's how to convince managers that it's in their best interests to facilitate more flexible working arrangements."
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/zara-use-of-ai-shows-how-retail-workflows-are-quietly-changing/",
+        "title": "Zara\u2019s use of AI shows how retail workflows are quietly changing",
+        "link": "https://www.artificialintelligence-news.com/news/zara-use-of-ai-shows-how-retail-workflows-are-quietly-changing/",
+        "published": "Fri, 19 Dec 2025 10:00:00 +0000",
+        "source": "AI News",
+        "summary": "<p>Zara is testing how far generative AI can be pushed into everyday retail operations, starting with a part of the business that rarely gets attention in technology discussions: product imagery. Recent reporting shows the retailer using AI to generate new images of real models wearing different outfits, based on existing photoshoots. Models remain involved in [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/zara-use-of-ai-shows-how-retail-workflows-are-quietly"
     }
 ]
