📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21454,5 +21454,77 @@
         "published": "Fri, 19 Dec 2025 10:00:00 +0000",
         "source": "AI News",
         "summary": "<p>Zara is testing how far generative AI can be pushed into everyday retail operations, starting with a part of the business that rarely gets attention in technology discussions: product imagery. Recent reporting shows the retailer using AI to generate new images of real models wearing different outfits, based on existing photoshoots. Models remain involved in [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/zara-use-of-ai-shows-how-retail-workflows-are-quietly"
+    },
+    {
+        "id": "https://www.wired.com/story/heated-rivalry-author-rachel-reid-interview/",
+        "title": "From Queer-Baiting to Neurodivergence: \u2018Heated Rivalry\u2019s Author Tackles Fan Theories and Controversy",
+        "link": "https://www.wired.com/story/heated-rivalry-author-rachel-reid-interview/",
+        "published": "Fri, 19 Dec 2025 11:00:00 +0000",
+        "source": "WIRED",
+        "summary": "\u201cI didn't expect this book to be analyzed like The Great Gatsby,\u201d hockey smut author Rachel Reid tells WIRED."
+    },
+    {
+        "id": "https://www.wired.com/story/americans-are-increasingly-convinced-that-aliens-have-visited-earth/",
+        "title": "Americans Are Increasingly Convinced That Aliens Have Visited Earth",
+        "link": "https://www.wired.com/story/americans-are-increasingly-convinced-that-aliens-have-visited-earth/",
+        "published": "Fri, 19 Dec 2025 10:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Polling shows that nearly half of Americans now believe aliens have visited this planet\u2014and that the number who aren't sure has dropped by two-thirds. The reasons why, experts say, are complicated."
+    },
+    {
+        "id": "https://gizmodo.com/daredevil-born-again-season-2-jessica-jones-first-look-marvel-2000701400",
+        "title": "\u2018Daredevil: Born Again\u2019 Season 2 Will Build on Matt and Jessica Jones\u2019 Brilliant \u2018Defenders\u2019 Pairing",
+        "link": "https://gizmodo.com/daredevil-born-again-season-2-jessica-jones-first-look-marvel-2000701400",
+        "published": "Fri, 19 Dec 2025 11:00:28 +0000",
+        "source": "Gizmodo",
+        "summary": "Charlie Cox thinks that, nine years later, the MCU will finally pay off the potential of one of the best parts of 'The Defenders.'"
+    },
+    {
+        "id": "https://mashable.com/video/snl-cher-ariana-grande-bowen-yang",
+        "title": "Cher tells Ariana Grande and Bowen Yang to snap out of it in SNL teaser",
+        "link": "https://mashable.com/video/snl-cher-ariana-grande-bowen-yang",
+        "published": "Fri, 19 Dec 2025 10:36:27 +0000",
+        "source": "Mashable",
+        "summary": "Watch Cher, Ariana Grande, and Bowen Yang tease this week's \"Saturday Night Live.\""
+    },
+    {
+        "id": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-19",
+        "title": "NYT Pips hints, answers for December 19, 2025",
+        "link": "https://mashable.com/article/pips-nyt-games-hints-answers-easy-medium-hard-december-19",
+        "published": "Fri, 19 Dec 2025 10:16:58 +0000",
+        "source": "Mashable",
+        "summary": "The New York Times' latest game, Pips, brings domino fun to your desktop. How to play Pips as well as hints in case you get stuck."
+    },
+    {
+        "id": "https://mashable.com/article/pluribus-episode-8-the-others-giant-antenna",
+        "title": "Pluribus episode 8 reveals something big the Others are planning",
+        "link": "https://mashable.com/article/pluribus-episode-8-the-others-giant-antenna",
+        "published": "Fri, 19 Dec 2025 10:04:35 +0000",
+        "source": "Mashable",
+        "summary": "In \"Pluribus\" episode 8, Carol (Rhea Seehorn) makes some new discoveries about the Others."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-19-2025",
+        "title": "NYT Connections Sports Edition today: Hints and answers for December 19, 2025",
+        "link": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-19-2025",
+        "published": "Fri, 19 Dec 2025 10:01:31 +0000",
+        "source": "Mashable",
+        "summary": "Connections: Sports Edition is a New York Times word game about finding common sports threads between words. How to solve the day's puzzle."
+    },
+    {
+        "id": "https://mashable.com/article/timberwolves-thunder-nba-2025-live-stream-for-free",
+        "title": "How to watch Timberwolves vs. Thunder online for free",
+        "link": "https://mashable.com/article/timberwolves-thunder-nba-2025-live-stream-for-free",
+        "published": "Fri, 19 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "How to watch NBA for free. Watch Minnesota Timberwolves vs. Oklahoma City Thunder in the NBA for free from anywhere in the world."
+    },
+    {
+        "id": "https://www.zdnet.com/article/heat-pump-energy-cost-savings/",
+        "title": "Thinking about a heat pump? 5 reasons it may finally be worth the investment in 2026",
+        "link": "https://www.zdnet.com/article/heat-pump-energy-cost-savings/",
+        "published": "Fri, 19 Dec 2025 11:00:35 GMT",
+        "source": "Latest news",
+        "summary": "In the face of energy cost swings and the desire to run cleaner and more efficiently, more homeowners are raising the stakes on their heating and cooling tech and their investment in long-term stability."
     }
 ]
