📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21526,5 +21526,157 @@
         "published": "Fri, 19 Dec 2025 11:00:35 GMT",
         "source": "Latest news",
         "summary": "In the face of energy cost swings and the desire to run cleaner and more efficiently, more homeowners are raising the stakes on their heating and cooling tech and their investment in long-term stability."
+    },
+    {
+        "id": "https://www.wired.com/gallery/the-best-handheld-vacuums/",
+        "title": "The 8 Best WIRED-Tested Handheld Vacuums (2025)",
+        "link": "https://www.wired.com/gallery/the-best-handheld-vacuums/",
+        "published": "Fri, 19 Dec 2025 12:06:00 +0000",
+        "source": "WIRED",
+        "summary": "Lightweight, powerful, and generally inexpensive, the handheld vacuum is the perfect household helper."
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-find-out-whats-streaming-and-where/",
+        "title": "How to Quickly Find Out What's Streaming on Multiple Services at Once",
+        "link": "https://www.wired.com/story/how-to-find-out-whats-streaming-and-where/",
+        "published": "Fri, 19 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Build a watchlist of all the movies and shows you want to watch, no matter where they\u2019re streaming."
+    },
+    {
+        "id": "https://www.wired.com/story/mike-schultz-paralympian-snowboardcross-starter-pack/",
+        "title": "What Paralympic Athlete Monster Mike Schultz Packs for His Races",
+        "link": "https://www.wired.com/story/mike-schultz-paralympian-snowboardcross-starter-pack/",
+        "published": "Fri, 19 Dec 2025 12:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The world champion adaptive snowboard cross athlete repairs his own prostheses before a competition."
+    },
+    {
+        "id": "https://www.wired.com/story/the-avatar-video-game-is-so-good-they-dont-need-to-make-the-movies/",
+        "title": "The Avatar Game Is So Good, They Don\u2019t Need to Make the Movies Anymore",
+        "link": "https://www.wired.com/story/the-avatar-video-game-is-so-good-they-dont-need-to-make-the-movies/",
+        "published": "Fri, 19 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "See the new movie Avatar: Fire and Ash if you\u2019d like. But if you really want to experience the big blue world of Pandora, the video game is where it\u2019s at."
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121536612.html?src=rss",
+        "title": "The Morning After: The highest rated tech of 2025",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121536612.html?src=rss",
+        "published": "Fri, 19 Dec 2025 12:15:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>The best phone of 2025: The iPhone 17 Pro, Pixel 10 Pro? Perhaps the Galaxy Z Fold 7? All three rank as some of the best tech we reviewed in 2025.</p>\n<a href=\"https://www.engadget.com/engadgets-best-of-2025-114500543.html\"><figure><img alt=\"TMA\" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/9cee2880-dccf-11f0-bb7b-118190b5871e\" style=\"height: 384px; width: 640px;\" /><figcaption></figcaption><div class=\"photo-credit\">Engadget</div></figure></a>\n<p>We have compiled <a href=\"https:/"
+    },
+    {
+        "id": "https://www.engadget.com/science/space/a-starlink-satellite-just-exploded-and-left-trackable-debris-120002814.html?src=rss",
+        "title": "A Starlink satellite just exploded and left 'trackable' debris",
+        "link": "https://www.engadget.com/science/space/a-starlink-satellite-just-exploded-and-left-trackable-debris-120002814.html?src=rss",
+        "published": "Fri, 19 Dec 2025 12:00:02 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>SpaceX said it experienced an anomaly with one if its Starlink satellites that was likely caused by a small explosion. &quot;The anomaly led to venting of the propulsion tank, a rapid decay in semi-major axis by about 4 km [2.5 miles] and the release of a small number of trackable low relatively velocity objects,&quot; Starlink wrote in a <a href=\"https://x.com/Starlink/status/2001691802911289712\">post on X</a>. Orbital tracking company LeoLabs <a href=\"https://x.com/LeoLabs_Space/status/2001"
+    },
+    {
+        "id": "https://gizmodo.com/matt-damon-avatar-james-cameron-2000701606",
+        "title": "We May Never Know the Truth About Matt Damon and James Cameron\u2019s Silly \u2018Avatar\u2019 Beef",
+        "link": "https://gizmodo.com/matt-damon-avatar-james-cameron-2000701606",
+        "published": "Fri, 19 Dec 2025 12:00:43 +0000",
+        "source": "Gizmodo",
+        "summary": "It's a he-said/he-said situation, as the director refutes the actor's claims about turning down a lucrative offer to star in the franchise."
+    },
+    {
+        "id": "https://mashable.com/video/jimmy-kimmel-trump-white-house-speech",
+        "title": "Jimmy Kimmel slams Trumps primetime speech as 18 straight minutes of him yelling",
+        "link": "https://mashable.com/video/jimmy-kimmel-trump-white-house-speech",
+        "published": "Fri, 19 Dec 2025 11:41:41 +0000",
+        "source": "Mashable",
+        "summary": "Jimmy Kimmel unpacked Donald Trump's primetime address from the White House."
+    },
+    {
+        "id": "https://mashable.com/video/stephen-colbert-trump-address",
+        "title": "Stephen Colbert gleefully mocks Trumps White House address",
+        "link": "https://mashable.com/video/stephen-colbert-trump-address",
+        "published": "Fri, 19 Dec 2025 11:26:50 +0000",
+        "source": "Mashable",
+        "summary": "Donald Trump gave a primetime address from the White House on Thursday and Stephen Colbert unpacked it on \"The Late Show.\""
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-asus-rog-swift-gaming-monitor-deal",
+        "title": "The ASUS ROG Swift gaming monitor is down to its best-ever price at Amazon \u2014 save $400",
+        "link": "https://mashable.com/article/dec-19-asus-rog-swift-gaming-monitor-deal",
+        "published": "Fri, 19 Dec 2025 11:06:57 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 19, the ASUS ROG Swift 32-inch 4K OLED gaming monitor has returned to its lowest-ever price of $899 at Amazon, 31% off its list price of $1,299."
+    },
+    {
+        "id": "https://www.zdnet.com/article/favorite-airpods-pro-features/",
+        "title": "5 AirPods Pro features that made me ditch my old pair instantly - and how to access them",
+        "link": "https://www.zdnet.com/article/favorite-airpods-pro-features/",
+        "published": "Fri, 19 Dec 2025 12:05:00 GMT",
+        "source": "Latest news",
+        "summary": "I own several AirPods, but I grab my newer AirPods Pro the most. And these features are why."
+    },
+    {
+        "id": "https://www.zdnet.com/article/5-things-to-do-trade-in-sell-iphone-ipad-backup/",
+        "title": "5 critical things to check first before selling or trading in your iPhone (and why they matter)",
+        "link": "https://www.zdnet.com/article/5-things-to-do-trade-in-sell-iphone-ipad-backup/",
+        "published": "Fri, 19 Dec 2025 12:04:00 GMT",
+        "source": "Latest news",
+        "summary": "Have you backed up yet? Erased your personal data? Turned off 'Find My'? There's more!"
+    },
+    {
+        "id": "https://www.zdnet.com/article/when-to-book-flights-google-researc/",
+        "title": "Google just updated its advice on when it's best to book flights - and the data paints a bigger picture",
+        "link": "https://www.zdnet.com/article/when-to-book-flights-google-researc/",
+        "published": "Fri, 19 Dec 2025 12:02:00 GMT",
+        "source": "Latest news",
+        "summary": "Looking for the best flight deals this holiday season? Google's 2025 airfare data reveals the smartest times to book, and why."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-roku-tv-settings-better-performance/",
+        "title": "Own a Roku TV? 6 settings I always change first for the best performance (and they only take seconds)",
+        "link": "https://www.zdnet.com/article/best-roku-tv-settings-better-performance/",
+        "published": "Fri, 19 Dec 2025 11:56:00 GMT",
+        "source": "Latest news",
+        "summary": "There are several ways to optimize your TV's operating system for faster performance. Here are my go-to."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-to-clear-windows-11-pc-cache/",
+        "title": "How to clear your Windows 11 PC cache (and put a stop to lag for good)",
+        "link": "https://www.zdnet.com/article/how-to-clear-windows-11-pc-cache/",
+        "published": "Fri, 19 Dec 2025 11:54:00 GMT",
+        "source": "Latest news",
+        "summary": "Clear this hidden data to noticeably speed up your computer - here's how to do it."
+    },
+    {
+        "id": "https://mullvad.net/en/blog/announcing-gotatun-the-future-of-wireguard-at-mullvad-vpn",
+        "title": "GotaTun -- Mullvad's WireGuard Implementation in Rust",
+        "link": "https://mullvad.net/en/blog/announcing-gotatun-the-future-of-wireguard-at-mullvad-vpn",
+        "published": "Fri, 19 Dec 2025 11:16:23 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46324543\">Comments</a>"
+    },
+    {
+        "id": "https://www.kdpcommunity.com/s/article/New-eBook-Download-Options-for-Readers-Coming-in-2026?language=en_US",
+        "title": "Amazon will allow ePub and PDF downloads for DRM-free eBooks",
+        "link": "https://www.kdpcommunity.com/s/article/New-eBook-Download-Options-for-Readers-Coming-in-2026?language=en_US",
+        "published": "Fri, 19 Dec 2025 10:03:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46324078\">Comments</a>"
+    },
+    {
+        "id": "https://github.com/moasq/production-saas-starter",
+        "title": "Show HN: I open-sourced my Go and Next B2B SaaS Starter (deploy anywhere, MIT)",
+        "link": "https://github.com/moasq/production-saas-starter",
+        "published": "Fri, 19 Dec 2025 11:34:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46324665\">Comments</a>"
+    },
+    {
+        "id": "https://dosaygo-studio.github.io/hn-front-page-2035/news-max.html",
+        "title": "Show HN: Hacker News, but every headline is hysterical clickbait",
+        "link": "https://dosaygo-studio.github.io/hn-front-page-2035/news-max.html",
+        "published": "Fri, 19 Dec 2025 11:21:45 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46324579\">Comments</a>"
     }
 ]
