📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21678,5 +21678,133 @@
         "published": "Fri, 19 Dec 2025 11:21:45 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46324579\">Comments</a>"
+    },
+    {
+        "id": "https://www.theverge.com/science/841169/ai-data-center-opposition",
+        "title": "Communities are rising up against data centers \u2014 and winning",
+        "link": "https://www.theverge.com/science/841169/ai-data-center-opposition",
+        "published": "2025-12-19T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "If there's one thing Republicans and Democrats came together on in 2025 - at least at the local level - it was to stop big, energy-hungry data center projects. For communities sick of rising electricity bills and pollution from power plants, data centers have become an obvious target. Fights against new data centers surged this [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/streaming/847287/pluribus-episode-8-recap-discussion-apple-tv",
+        "title": "There\u2019s finally a little bit of sunshine in Pluribus",
+        "link": "https://www.theverge.com/streaming/847287/pluribus-episode-8-recap-discussion-apple-tv",
+        "published": "2025-12-19T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Things might finally be looking up. In the penultimate episode of Pluribus' first season, Carol (Rhea Seehorn) actually seems to be happy. That's a pretty big deal for someone the show describes as the \"most miserable person on Earth,\" who also happens to be living through an odd sort of apocalyptic scenario that she is [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/847925/bmx-hyper-semi-solid-state-power-banks",
+        "title": "Semi-solid state MagSafe power banks arrive from the founder of Hyper",
+        "link": "https://www.theverge.com/news/847925/bmx-hyper-semi-solid-state-power-banks",
+        "published": "2025-12-19T07:46:19-05:00",
+        "source": "The Verge",
+        "summary": "A new company called BMX, founded by accessory royalty, has emerged from Kickstarter to make its SolidSafe semi-solid state power banks available to the general public. Like the Kuxiu semi-solid state power banks I've recently reviewed, BMX's promise to have twice the longevity and be safer than traditional power banks, which have been the subject [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-camera-bags-backpacks-straps-inserts/",
+        "title": "17 Best Camera Bags, Slings, Straps, and Backpacks (2025), Tested and Reviewed",
+        "link": "https://www.wired.com/gallery/best-camera-bags-backpacks-straps-inserts/",
+        "published": "Fri, 19 Dec 2025 13:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Tote your photo and video gear around in style. We tested more than 80 packs and rounded up our favorites."
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-sexy-gift/",
+        "title": "The 14 Best Sexy Gifts for Lovers (2025)",
+        "link": "https://www.wired.com/gallery/best-sexy-gift/",
+        "published": "Fri, 19 Dec 2025 12:35:00 +0000",
+        "source": "WIRED",
+        "summary": "Spice things up with our favorite sex toys, date-night boxes, and lingerie for every type of couple."
+    },
+    {
+        "id": "https://www.engadget.com/gaming/a-total-league-of-legends-revamp-is-coming-in-2027-130000644.html?src=rss",
+        "title": "A total League of Legends revamp is coming in 2027",
+        "link": "https://www.engadget.com/gaming/a-total-league-of-legends-revamp-is-coming-in-2027-130000644.html?src=rss",
+        "published": "Fri, 19 Dec 2025 13:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Riot Games has confirmed that it\u2019s working on a massive update for <em>League of Legends</em> after <a class=\"link\" href=\"https://www.bloomberg.com/news/articles/2025-12-18/riot-has-a-secret-plan-to-remake-its-league-of-legends-game\" target=\"_blank\"><em>Bloomberg</em></a> published a report saying that the company has plans to remake the game. Back in November, a Chinese esports insider also <a class=\"link\" href=\"https://x.com/igenico/status/1987812460615832005\" target=\"_blank\">reported</a> t"
+    },
+    {
+        "id": "https://www.engadget.com/deals/pick-up-the-samsung-p9-microsd-express-card-for-switch-2-while-its-down-to-a-record-low-141947013.html?src=rss",
+        "title": "Pick up the Samsung P9 microSD Express card for Switch 2 while it's down to a record low",
+        "link": "https://www.engadget.com/deals/pick-up-the-samsung-p9-microsd-express-card-for-switch-2-while-its-down-to-a-record-low-141947013.html?src=rss",
+        "published": "Fri, 19 Dec 2025 12:52:10 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>It was a big day in gaming history when Nintendo finally released its Switch sequel. But the <a href=\"https://www.engadget.com/gaming/nintendo/nintendo-switch-2-review-more-of-what-you-love-120048430.html\">Nintendo Switch 2</a> lacked many options for microSD Express cards. Samsung helped change that this fall, with the release of its P9 Express series of microSD Express cards, and now one of them is on sale.</p> \n<p>Currently, you can pick up the <a class=\"rapid-with-clickid\" href=\"https://s"
+    },
+    {
+        "id": "https://gizmodo.com/viral-tweets-that-were-completely-fake-in-2025-2000695941",
+        "title": "Viral Tweets That Were Completely Fake in 2025",
+        "link": "https://gizmodo.com/viral-tweets-that-were-completely-fake-in-2025-2000695941",
+        "published": "Fri, 19 Dec 2025 12:50:30 +0000",
+        "source": "Gizmodo",
+        "summary": "Fake tweets from Rob Reiner, Elon Musk, and Donald Trump all made the rounds this year."
+    },
+    {
+        "id": "https://gizmodo.com/msi-raider-18-hx-review-distills-the-best-and-worst-of-gaming-laptops-2000700902",
+        "title": "The MSI Raider 18 HX Distills the Best and Worst of Gaming Laptops",
+        "link": "https://gizmodo.com/msi-raider-18-hx-review-distills-the-best-and-worst-of-gaming-laptops-2000700902",
+        "published": "Fri, 19 Dec 2025 12:30:16 +0000",
+        "source": "Gizmodo",
+        "summary": "You can't have everything, even for $4,000, but the MSI Raider 18 HX offers enough performance for 4K."
+    },
+    {
+        "id": "https://mashable.com/article/dec-19-lego-technic-nasa-apollo-lunar-roving-vehicle-deal",
+        "title": "Grab the Lego Technic NASA Apollo Lunar Roving Vehicle for its lowest-ever price at Amazon \u2014 save over $80",
+        "link": "https://mashable.com/article/dec-19-lego-technic-nasa-apollo-lunar-roving-vehicle-deal",
+        "published": "Fri, 19 Dec 2025 12:44:00 +0000",
+        "source": "Mashable",
+        "summary": "As of Dec. 19, the Lego Technic NASA Apollo Lunar Roving Vehicle (42182) has dropped to its lowest price yet at Amazon of $137.99, 37% off its list price of $219.99."
+    },
+    {
+        "id": "https://mashable.com/video/rian-johnson-wake-up-dead-man-say-more",
+        "title": "Rian Johnson on Wake Up Dead Man, Josh OConnors neck tattoo, and AI slop",
+        "link": "https://mashable.com/video/rian-johnson-wake-up-dead-man-say-more",
+        "published": "Fri, 19 Dec 2025 12:35:45 +0000",
+        "source": "Mashable",
+        "summary": "The \"Knives Out\" writer/director speaks to his love of theater, pride in going lowbrow, the hot priest that has social media swooning, and the future of films as AI is on the rise."
+    },
+    {
+        "id": "https://mashable.com/article/wordle-today-answer-december-19-2025",
+        "title": "Wordle today: Answer, hints for December 19, 2025",
+        "link": "https://mashable.com/article/wordle-today-answer-december-19-2025",
+        "published": "Fri, 19 Dec 2025 12:28:58 +0000",
+        "source": "Mashable",
+        "summary": "Here's the answer for \"Wordle\" #1643 on December 19 as well as a few hints, tips, and clues to help you solve it yourself."
+    },
+    {
+        "id": "https://readwrite.com/slot-jackpot-tax-increase-to-go-into-effect-in-time-for-2026-taxes/",
+        "title": "Slot jackpot tax increase to go into effect in time for 2026 taxes",
+        "link": "https://readwrite.com/slot-jackpot-tax-increase-to-go-into-effect-in-time-for-2026-taxes/",
+        "published": "Fri, 19 Dec 2025 12:32:50 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"A newspaper in front of a slot machine with the headline &quot;Slot jackpot tax to increase by 2026&quot;\" class=\"attachment-medium size-medium wp-post-image\" height=\"188\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Slot-jackpot-tax-to-increase-by-2026-300x188.jpeg\" style=\"width: 100%; height: 62.5%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>The IRS has now published updated confirmation that the casino slot jackpot tax is to be almost doubled in 2026.&#8230; <a clas"
+    },
+    {
+        "id": "https://readwrite.com/hard-rock-bet-launches-for-you-feature/",
+        "title": "Hard Rock Bet Sportsbook launches \u201cFor You\u201d personalized betting hub",
+        "link": "https://readwrite.com/hard-rock-bet-launches-for-you-feature/",
+        "published": "Fri, 19 Dec 2025 12:26:57 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"Hard Rock Sportsbook logo\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/10/Hard-Rock-Sportsbook-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Hard Rock Bet Sportsbook has launched a new feature called \u201cFor You\u201d on December 17. This is an in-app personalization&#8230; <a class=\"more-link\" href=\"https://readwrite.com/hard-rock-bet-launches-for-you-feature/\">Continu"
+    },
+    {
+        "id": "https://terriblesoftware.org/2025/12/19/the-strange-case-of-engineers-who-dismiss-ai/",
+        "title": "Engineers who dismiss AI",
+        "link": "https://terriblesoftware.org/2025/12/19/the-strange-case-of-engineers-who-dismiss-ai/",
+        "published": "Fri, 19 Dec 2025 13:03:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46325360\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/service-provider-ai-implementations-india-enterprise-scale-copilot-rollouts/",
+        "title": "50,000 Copilot licences for Indian service companies",
+        "link": "https://www.artificialintelligence-news.com/news/service-provider-ai-implementations-india-enterprise-scale-copilot-rollouts/",
+        "published": "Fri, 19 Dec 2025 13:19:12 +0000",
+        "source": "AI News",
+        "summary": "<p>Cognizant, Tata Consultancy Services, Infosys, and Wipro have announced plans to deploy more than 200,000 Microsoft Copilot licenses in their enterprises \u2013 over 50,000 per company \u2013 in what Microsoft is calling a new benchmark for enterprise-scale adoption of generative AI. The companies involved are framing the move as the implementation of a default tool [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/service-provider-ai-implementations-india-enterprise-s"
     }
 ]
