📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -21806,5 +21806,61 @@
         "published": "Fri, 19 Dec 2025 13:19:12 +0000",
         "source": "AI News",
         "summary": "<p>Cognizant, Tata Consultancy Services, Infosys, and Wipro have announced plans to deploy more than 200,000 Microsoft Copilot licenses in their enterprises \u2013 over 50,000 per company \u2013 in what Microsoft is calling a new benchmark for enterprise-scale adoption of generative AI. The companies involved are framing the move as the implementation of a default tool [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/service-provider-ai-implementations-india-enterprise-s"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/hacks-thefts-and-disruption-the-worst-data-breaches-of-2025/",
+        "title": "Hacks, thefts and disruption: The worst data breaches of 2025",
+        "link": "https://techcrunch.com/2025/12/19/hacks-thefts-and-disruption-the-worst-data-breaches-of-2025/",
+        "published": "Fri, 19 Dec 2025 14:09:03 +0000",
+        "source": "TechCrunch",
+        "summary": "TechCrunch looks back at the biggest data breaches, disruptive cyberattacks, and damaging hacks of 2025, from the raiding of U.S. government databases to a hack every month in South Korea."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/19/openai-is-reportedly-trying-to-raise-100b-at-an-830b-valuation/",
+        "title": "OpenAI is reportedly trying to raise $100B at an $830B valuation",
+        "link": "https://techcrunch.com/2025/12/19/openai-is-reportedly-trying-to-raise-100b-at-an-830b-valuation/",
+        "published": "Fri, 19 Dec 2025 13:32:57 +0000",
+        "source": "TechCrunch",
+        "summary": "The ChatGPT maker is aiming to raise the funding by the end of the first quarter in 2026, and the company may ask sovereign wealth funds to invest in the round."
+    },
+    {
+        "id": "https://www.theverge.com/tech/842190/2025-smartphones-design-color-fashion",
+        "title": "Phones were fashionable again in 2025",
+        "link": "https://www.theverge.com/tech/842190/2025-smartphones-design-color-fashion",
+        "published": "2025-12-19T08:30:00-05:00",
+        "source": "The Verge",
+        "summary": "A year or two ago, when a phone showed up at my door for review, I could pretty much count on it being black, gray, or maybe (as a treat) white. But in 2025, that hasn't been the case. Phones I reviewed this year featured everything from real wood grain back panels to deep blue [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/which-macbook-should-you-buy/",
+        "title": "Best MacBooks (2025): Which Apple Laptop Should You Buy?",
+        "link": "https://www.wired.com/story/which-macbook-should-you-buy/",
+        "published": "Fri, 19 Dec 2025 13:30:00 +0000",
+        "source": "WIRED",
+        "summary": "With prices at new lows and an incoming memory shortage, here's our advice on which MacBook you should buy."
+    },
+    {
+        "id": "https://gizmodo.com/tech-billionaires-pledge-1-billion-to-cern-for-future-circular-collider-2000701596",
+        "title": "Tech Billionaires Pledge $1 Billion to CERN for Future Circular Collider",
+        "link": "https://gizmodo.com/tech-billionaires-pledge-1-billion-to-cern-for-future-circular-collider-2000701596",
+        "published": "Fri, 19 Dec 2025 13:35:14 +0000",
+        "source": "Gizmodo",
+        "summary": "The first phase of the Future Circular Collider wouldn't be completed until the 2040s."
+    },
+    {
+        "id": "https://github.com/envirobly/stepped",
+        "title": "Show HN: Stepped Actions \u2013 distributed workflow orchestration for Rails",
+        "link": "https://github.com/envirobly/stepped",
+        "published": "Sun, 14 Dec 2025 09:29:47 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46261884\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/19/1130167/the-download-chinas-dying-ev-batteries-and-why-ai-doomers-are-doubling-down/",
+        "title": "The Download: China\u2019s dying EV batteries, and why AI doomers are doubling down",
+        "link": "https://www.technologyreview.com/2025/12/19/1130167/the-download-chinas-dying-ev-batteries-and-why-ai-doomers-are-doubling-down/",
+        "published": "Fri, 19 Dec 2025 13:10:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. China figured out how to sell EVs. Now it has to bury their batteries. In the past decade, China has seen an EV boom, thanks in part to government support. Buying an electric&#8230;"
     }
 ]
